test/compile_errors/stage1/obj/use_invalid_number_literal_as_array_index.zig
var v = 25;
export fn entry() void {
    var arr: [v]u8 = undefined;
    _ = arr;
}

// use invalid number literal as array index
//
// tmp.zig:1:1: error: unable to infer variable type
